--- a/style.css
+++ b/style.css
@@ -28,16 +28,16 @@ body {
     }
 }
 
-
+/*
 table {
-	margin-top: 30px;
+	margin-top: 10px;
 }
-
+*/
 
 .image {
 	cursor: pointer;
-	width: 150px;
-	height: 197px;
+	width: 75px;
+	height: 98.5px;
 	background-color: red;
 	border-style: solid;
 	border-width: 3px;
@@ -72,10 +72,22 @@ table {
     }
 
 #scor {
-    margin-top: 10px;
-    padding: 2px;
+    margin-top: 20px;
+    padding-top: 5px;
     width: 100px;
     height: 30px;
     background-color: #787878;
     border-radius: 3px;
+}
+
+#title {
+    font-size: 45px;
+    margin-top: 40px;
+    -transition: color 2s;
+    -moz-transition: color 2s;
+    -webkit-transition: color 2s;
+}
+
+#title:hover {
+    color: red;
 }
