--- a/style2.css
+++ b/style2.css
@@ -6,11 +6,11 @@ body {
 	-ms-user-select: none;
 	user-select: none;
 	overflow: hidden;
+	color: darkcyan;
 }
 
 
 #titlu {
-	color: darkCyan ;
 	font-size: 50px;
 	font-family: Segoe UI;
 	text-align: center;
@@ -20,10 +20,6 @@ body {
 	cursor: pointer;
 	height: 120px;
 	width: 90px;
-	border-radius: 5px;
-	border-style: solid;
-	border-width: 2px;
-	border-color: cyan green;
 	text-align: center;
 	padding-top: 20px;
 	font-size: 40px;
@@ -31,6 +27,10 @@ body {
 	text-shadow:0 0 2px darkCyan;
 	box-shadow: 2px 2px 5px black;
 	display: none;
+	border-radius: 5px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: cyan green;
 	-transition: background-color 1s;
 	-transition: background-color 1s;
 	-transition: background-color 1s;
@@ -41,8 +41,7 @@ body {
 	font-size: 20px;
 }
 
-#copyright
-{
+#copyright {
     position: absolute;
     bottom: -30px;
     right: 10px;
@@ -57,7 +56,39 @@ body {
     -moz-transition: bottom 0.5s;
 } 
 
-#copyright:hover
-{
+#copyright:hover {
     bottom: 0px;
+}
+
+#query {
+	display: none;
+	width: 400px;
+	height: 200px;
+	padding-top: 40px;
+	text-align: center;
+	border-radius: 5px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: cyan green;
+	background-color: lightcyan;
+	font-size: 20px;
+}
+
+#send {
+	font-size: 18px;
+	width: 100px;
+	text-align: center;
+	border-radius: 5px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: cyan green;
+	background-color: lightcyan;
+	cursor: pointer;
+	-transition: background-color 1s;
+    -webkit-transition: background-color 1s;
+    -moz-transition: background-color 1s;
+}
+
+#send:hover {
+	background-color: cyan;
 }
