--- a/style.css
+++ b/style.css
@@ -29,10 +29,7 @@ body {
 	border-radius: 5px;
 	border-style: solid;
 	border-width: 2px;
-	border-color: cyan green;
-	-transition: background-color 1s;
-	-transition: background-color 1s;
-	-transition: background-color 1s;
+	border-color: cyan darkcyan;
 }
 
 #clicks {
