--- a/style.css
+++ b/style.css
@@ -111,3 +111,23 @@ body {
 #score:hover {
 	width: 150px;
 }
+
+#gamenr {
+	position: absolute;
+	top: 100px;
+    right: 0px;
+    width : 100px;
+    height : 30px;
+    padding-top: 5px;
+    padding-left: 15px;
+    background-color: #f0f0f0;
+    color: darkcyan;
+    border-radius: 5px 0px 0px 5px;
+    -transition: width 0.5s;
+    -webkit-transition: width 0.5s;
+    -moz-transition: width 0.5s;
+}
+
+#gamenr:hover {
+	width: 150px;
+}
